fix close menu on mobile version

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -287,6 +287,7 @@ img
     background: $white url(../img/sec-5-3.jpg) no-repeat center/cover
 
 .transparent_cta
+    font-size: 14px
     border: 1px solid $white
     border-radius: 3px
     background-color: transparent 
